--- a/pto.html
+++ b/pto.html
@@ -8,6 +8,7 @@
         <div class="link"><a href="./index.html">Home</a></div>
         <a href="https://www.bhico.com" target="_blank">BHI</a>
       </div>
+      
       <h1>Welcome to the BHI PTO Form</h1>
       <div class="pto-form">
       <form action="https://httpbin.org/post" method="post">
@@ -65,7 +66,8 @@
           <label for="pto4">Military</label>
         </div>
         <div class="submit-button">
-          <input type="submit" value="Submit">
+          <!-- <input type="submit" value="Submit"> -->
+          <button type="submit">Submit</button>
         </div>
         </form>
       </div>
